--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&family=Roboto+Mono:wght@200&display=swap');
+
+* {
+    padding: 0;
+    margin: 0;
+    border: none;
+}
+
 body {
-    font-family: arial;
+    font-family: Poppins, sans-serif;
+    font-weight: 200;
 }
