--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,3 +61,15 @@ h1, h2 {
     width: 100%;
     background: url('../images/hero-image.jpeg') no-repeat center center;
 }
+
+#tag-line {
+    letter-spacing: 4px;
+    width: 300px;
+    height: 200px;
+    padding-top: 40px;
+    padding-left: 10px;
+    background-color: rgba(207, 194, 120, .6);
+    bottom: 30px;
+    right: 150px;
+    position: absolute;
+}
